--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,12 @@ version: "3.9"
 
 services:
   tomcat:
-    image: tomcat:10.1-jdk17-temurin
+    image: tomcat:10.1-jdk17-temurin #Nome da imagem de acordo com a aplicação
     container_name: tomcat
     ports:
       - "8080:8080"
     volumes:
       # Monta o WAR que está no Linux para dentro do Tomcat
-      - ./helloworld.war:/usr/local/tomcat/webapps/helloworld.war
+      - ./nomedoarquivo.war:/usr/local/tomcat/webapps/nomedoarquivo.war
     environment:
       TZ: America/Sao_Paulo
